--- a/index.html
+++ b/index.html
@@ -568,24 +568,214 @@
 
       <section class="homePageS5">
         <div class="container">
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
-          <!-- از اینجا ادامه دهید -->
+          <div>
+            <h3>امکانات و ویژگی‌های بی‌نظیر برای طراحی سایت</h3>
+            <p>با امکانات حرفه‌ای پرتال، با قدرت شروع کنید، با سرعت رشد کنید</p>
+          </div>
 
-          <h3>امکانات و ویژگی‌های بی‌نظیر برای طراحی سایت</h3>
-          <p>با امکانات حرفه‌ای پرتال، با قدرت شروع کنید، با سرعت رشد کنید</p>
+          <div class="kadrFlex">
+            <div class="itemFlex itemFlex1">
+              <div class="kadrAks">
+                <img
+                  src="assets/media/images/home-s5-topRight.png"
+                  alt="کسب رتبه‌های برتر گوگل"
+                />
+              </div>
+              <div class="kadrContent">
+                <h3>کسب رتبه‌های برتر گوگل</h3>
+                <p>
+                  وب‌سایت یا فروشگاه اینترنتی شما تمام استانداردهای لازم برای
+                  کسب رتبه‌های بالای گوگل را دارد و به اصطلاح، کاملاً برای سئو
+                  آماده است.
+                </p>
+              </div>
+            </div>
+
+            <div class="itemFlex itemFlex2">
+              <div class="kadrAks">
+                <img
+                  src="assets/media/images/home-s5-topCenter.png"
+                  alt="ثبت دامنۀ اختصاصی"
+                />
+              </div>
+              <div class="kadrContent">
+                <h3>ثبت دامنۀ اختصاصی</h3>
+                <p>
+                  دوست دارید آدرس وب‌سایت شما چه باشد؟ در پرتال می‌توانید خیلی
+                  سریع دامنه مورد نظرتان را ثبت کنید یا دامنه‌ قبلی خود را به
+                  سایت متصل کنید.
+                </p>
+              </div>
+            </div>
+
+            <div class="itemFlex itemFlex3">
+              <div class="kadrAks">
+                <img
+                  src="assets/media/images/home-s5-topLeft.png"
+                  alt="قالب‌های متنوع و زیبا"
+                />
+              </div>
+              <div class="kadrContent">
+                <h3>قالب‌های متنوع و زیبا</h3>
+                <p>
+                  شما به راحتی می‌توانید متن‌ها، تصاویر و سایر بخش‌های قالب خود
+                  را ویرایش کنید. تغییر قالب هم با یک کلیک (و کاملاً رایگان)
+                  ممکن است.
+                </p>
+              </div>
+            </div>
+
+            <div class="itemFlex itemFlex4">
+              <div class="kadrAks">
+                <img
+                  src="assets/media/images/home-s5-bottom-right.png"
+                  alt="طراحی سایت واکنش‌گرا"
+                />
+              </div>
+              <div class="kadrContent">
+                <h3>طراحی سایت واکنش‌گرا</h3>
+                <p>
+                  مهم نیست که بازدیدکنندۀ سایت شما از چه دستگاهی استفاده می‌کند.
+                  طراحی وب سایت شما به گونه‌ای است که صفحه نمایش کاربر هر
+                  اندازه‌ای باشد، باز هم سایت شما خوانا، جذاب و کاملاً قابل
+                  استفاده خواهد بود.
+                </p>
+              </div>
+            </div>
+
+            <div class="itemFlex itemFlex5">
+              <div class="kadrAks">
+                <img
+                  src="assets/media/images/home-s5-bottom-left.png"
+                  alt="پشتیبانی، حتی روزهای تعطیل"
+                />
+              </div>
+              <div class="kadrContent">
+                <h3>پشتیبانی، حتی روزهای تعطیل</h3>
+                <p>
+                  تیم پشتیبانی ما در تمام روزهای هفته از ساعت 9 تا 22 و در
+                  تعطیلات از ساعت 9 تا 17، از طریق سایت، ایمیل و تلفن پاسخگوی
+                  شماست.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="kadrMore">
+            <div>پرتال صدها امکان دارد. امکاناتی که هر روز بیشتر می‌شوند.</div>
+
+            <div>
+              <a href="#" class="dokme">شروع راه اندازی</a>
+              <a href="#"
+                >با تمام امکانات پرتال آشنا شوید
+                <i
+                  class="fa-solid fa-arrow-left-long"
+                  style="vertical-align: middle"
+                ></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- بخش ششم -->
+      <section class="homePageS6">
+        <div class="container">
+          <div class="titre">
+            <h3>داستان های موفقیت</h3>
+            <p>پرتال چگونه تبدیل به پلی برای موفقیت دیگران شده است؟</p>
+          </div>
+
+          <div class="kadrFlex">
+            <div class="itemFlex itemFlex1">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s6-right.webp"
+                    alt="وبسایت ویکی نیکی"
+                  />
+                </div>
+
+                <h4>وبسایت ویکی نیکی</h4>
+                <p>طراحی سایت خیریه ویکی نیکی</p>
+              </a>
+            </div>
+
+            <div class="itemFlex itemFlex2">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s6-center.webp"
+                    alt="وبسایت ماکروتل"
+                  />
+                </div>
+
+                <h4>طراحی سایت برند ماکروتل</h4>
+                <p>خرید سایت فروشگاهی برای فروش موبایل</p>
+              </a>
+            </div>
+
+            <div class="itemFlex itemFlex3">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s6-left.webp"
+                    alt="وبسایت boock365"
+                  />
+                </div>
+
+                <h4>فروشگاه اینترنتی 365book</h4>
+                <p>خلاصه صوتی (پادکست) برترین کتاب‌های دنیا</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- بخش هفتم -->
+
+      <section class="homePageS7">
+        <div class="container">
+          <a href="#">
+            <div class="kadrFlex">
+              <div class="itemFlex itemFlex1">
+                <img
+                  src="assets/media/images/home-s7.png"
+                  alt="دلایل برتری پرتال"
+                />
+              </div>
+
+              <div class="itemFlex itemFlex2">
+                <strong> ۳۵ دلیل برای آنکه پرتال را انتخاب کنید! </strong>
+              </div>
+
+              <div class="itemFlex itemFlex3">
+                <i
+                  class="fa-solid fa-arrow-left-long"
+                  style="vertical-align: middle"
+                ></i>
+              </div>
+            </div>
+          </a>
+        </div>
+      </section>
+
+      <!-- بخش هشتم | سوالات متداول -->
+      <section>
+        <div class="container">
+          <div class="titre">
+            <h3>سوالات متداول</h3>
+            <p>
+              پاسخ سوال‌هایی که شاید دربارۀ سایت ساز و فروشگاه ساز پرتال داشته
+              باشید
+            </p>
+          </div>
         </div>
       </section>
     </main>
+
+    <!-- فوتر -->
+    <footer></footer>
 
     <!-- fontawesome -->
     <script
