--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
       </section>
 
       <!-- بخش هشتم | سوالات متداول -->
-      <section>
+      <section class="homePageS8">
         <div class="container">
           <div class="titre">
             <h3>سوالات متداول</h3>
@@ -770,12 +770,481 @@
               باشید
             </p>
           </div>
+
+          <!-- زیرمنو ها -->
+
+          <div class="kadrAccordion">
+            <button class="accordion">
+              طراحی سایت با پرتال چه مزایایی نسبت به سایر روش‌ها دارد؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <ol>
+                  <li>
+                    پرتال یک سرویس کاملاً ایرانی و اختصاصی است که صفر تا صد آن
+                    توسط یک تیم حرفه‌ای کدنویسی شده است.
+                  </li>
+
+                  <li>
+                    راه‌اندازی سایت با پرتال بسیار ساده است و به دانش فنی خاصی
+                    نیاز ندارد.
+                  </li>
+
+                  <li>
+                    تمام زیرساخت‌های لازم برای کسب درآمد از سایت را در اختیار
+                    شما قرار می‌دهد.
+                  </li>
+
+                  <li>
+                    می‌توانید هر نوع محصولی از قبیل کالاهای فیزیکی، مجازی و
+                    آموزشی را در سایتتان بفروشید.
+                  </li>
+
+                  <li>
+                    در تمام طول مدت همکاری با ما، یک تیم متخصص برای پشتیبانی
+                    سایت در دسترس شماست.
+                  </li>
+                </ol>
+              </div>
+            </div>
+
+            <button class="accordion">
+              طراحی وب سایت با پرتال به دانش برنامه‌نویسی نیاز دارد؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  خیر؛ شما بدون حتی یک خط کدنویسی هم می‌توانید وب‌سایتی کامل و
+                  عالی برای خودتان بسازید. همچنین ویدیوهای آموزشی هم در اختیار
+                  شما قرار دادیم و کار با تمام بخش‌های فروشگاه ساز پرتال در
+                  آن‌ها توضیح داده شده است.
+                </p>
+              </div>
+            </div>
+
+            <button class="accordion">امکان تست خدمات پرتال وجود دارد؟</button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  بله؛ پرتال ۷ روز تست رایگان به شما می‌دهد. در این مدت بدون
+                  پرداخت هیچ هزینه‌ای به تمام خدمات پرتال دسترسی دارید و
+                  می‌توانید یک سایت کامل برای خودتان بسازید.
+                </p>
+              </div>
+            </div>
+
+            <button class="accordion">
+              برای طراحی وب سایت با پرتال باید هاست خریداری کنم؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  خیر؛ پرتال هاست، دامنه و هر چیزی که برای طراحی سایتتان به آن
+                  نیاز دارید را به‌صورت یک پکیج کامل در اختیار شما قرار می‌دهد.
+                </p>
+              </div>
+            </div>
+
+            <button class="accordion">
+              سایتی که با پرتال می‌سازم در موتورهای جستجو نمایش داده می‌شود؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  بله؛ کدنویسی‌های پرتال کاملاً بهینه و منطبق با اصول سئو است،
+                  در نتیجه سایت شما قابلیت قرار گرفتن در صفحۀ اول و حتی رتبۀ یک
+                  گوگل را هم دارد. بسیاری از سایت‌هایی که با پرتال ساخته شده‌اند
+                  همین الان در کلمات کلیدی مختلف، رتبۀ 1 تا 3 گوگل هستند.
+                </p>
+              </div>
+            </div>
+
+            <button class="accordion">
+              آیا پرتال از فروش‌های من کارمزد کسر می‌کند؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  خیر؛ پرتال به تراکنش‌های مالی شما دسترسی ندارد. سایت فروشگاهی
+                  شما به‌صورت مستقیم به درگاه‌های پرداخت اینترنتی موردنظر شما
+                  متصل می‌شود و پولی که مشتری شما پرداخت می‌کند، بدون واسطه به
+                  حسابتان واریز می‌شود.
+                </p>
+              </div>
+            </div>
+
+            <button class="accordion">
+              طراحی وب سایت با پرتال چقدر هزینه دارد؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  بعد از پایان ۷ روز تست رایگان پرتال، در صورت تمایل می‌توانید
+                  یکی از بسته‌های پرتال را خریداری کنید. بعد خرید هر کدام از
+                  بسته‌ها، هیچ هزینۀ اضافی و پنهانی دیگری از شما دریافت نمی‌شود
+                  و همۀ امکانات پرتال در دسترس شما قرار دارند.
+                </p>
+              </div>
+            </div>
+
+            <button class="accordion">
+              آیا امکان پرداخت قسطی هزینۀ طراحی سایت وجود دارد؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  بله؛ می‌توانید هزینۀ بستۀ استاندارد را در 2 قسط و بستۀ پیشرفته
+                  را در 3 قسط پرداخت کنید.
+                </p>
+              </div>
+            </div>
+
+            <button class="accordion">
+              برای راه‌اندازی سایت باید مدرک و مجوز خاصی داشته باشم؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  خیر؛ برای فعال کردن سایتتان در پرتال فقط باید عکس کارت ملی
+                  جدید یا شناسنامۀ خودتان را ارسال کنید و به هیچ مدرک و مجوز
+                  دیگری نیاز نیست.
+                </p>
+              </div>
+            </div>
+
+            <button class="accordion">
+              آیا برای پشتیبانی پرتال باید هزینه‌ای پرداخت کنم؟
+            </button>
+            <div class="panel">
+              <div class="contentPanel">
+                <p>
+                  خیر؛ خدمات پشتیبانی پرتال کاملاً رایگان است و هیچ هزینه‌ای از
+                  شما دریافت نمی‌شود.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- بخش نهم -->
+
+      <section class="homePageS9">
+        <div class="container">
+          <div class="titre">
+            <h3>آموزش راه اندازی کسب و کار اینترنتی</h3>
+            <p>
+              مسیر موفقیت را برای شما مشخص کرده‌ایم؛ از اولین قدم تا دستاوردهای
+              بزرگ
+            </p>
+          </div>
+
+          <div class="kadrFlex">
+            <div class="itemFlex itemFlex1">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s9-right.webp"
+                    alt="آشنایی با اسکم اسکور"
+                  />
+                </div>
+                <h3>اسپم اسکور (spam score) چیست و چرا باید آن را کاهش داد؟</h3>
+              </a>
+            </div>
+
+            <div class="itemFlex itemFlex2">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s9-center.webp"
+                    alt="محاسبه ارزش طول عمر مشتری"
+                  />
+                </div>
+                <h3>ارزش طول عمر مشتری (CLV) چیست؟ کاربرد و نحوه محاسبه آن</h3>
+              </a>
+            </div>
+
+            <div class="itemFlex itemFlex3">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s9-left.webp"
+                    alt="چگونه برندسازی کنیم؟ راهنمای جامع برای ساخت برند معروف"
+                  />
+                </div>
+                <h3>چگونه برندسازی کنیم؟ راهنمای جامع برای ساخت برند معروف</h3>
+              </a>
+            </div>
+          </div>
+
+          <div class="kadrDokme">
+            <a href="#" class="dokme"> همه نوشته </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- بخش دهم -->
+
+      <section class="homePageS10">
+        <div class="container">
+          <div class="kadrFlex">
+            <div class="itemFlex itemFlex1">
+              <strong>مخاطب‌های شما در اینترنت هستند</strong>
+              <p>همین امروز، سایت خود را بسازید و در دسترس آن‌ها قرار بگیرید</p>
+            </div>
+
+            <div class="itemFlex itemFlex2">
+              <a href="#" class="dokme">شروع راه اندازی سایت</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- بخش یازدهم -->
+
+      <section class="homePageS11">
+        <div class="container">
+          <div class="titre">
+            <h4>همکاران ما</h4>
+            <p>وبسایت هایی که با پرتال همکاری میکنند</p>
+          </div>
+
+          <div class="kadrFlex">
+            <div class="itemFlex itemFlex1">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s11-right.webp"
+                    alt="نوین"
+                  />
+                </div>
+                <div class="kadrContent">
+                  <div>نوین</div>
+                  <div>آژانس بازاریابی دیجیتال</div>
+                </div>
+              </a>
+            </div>
+
+            <div class="itemFlex itemFlex2">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s11-centerRight.webp"
+                    alt="ملی پیامک"
+                  />
+                </div>
+                <div class="kadrContent">
+                  <div>ملی پیامک</div>
+                  <div>پیشرفته ترین سامانه پیامکی</div>
+                </div>
+              </a>
+            </div>
+
+            <div class="itemFlex itemFlex3">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s11-centerLeft.webp"
+                    alt="دیدوگرام"
+                  />
+                </div>
+                <div class="kadrContent">
+                  <div>دیدوگرام</div>
+                  <div>پلتفرم استخدام ادمین اینستاگرام</div>
+                </div>
+              </a>
+            </div>
+
+            <div class="itemFlex itemFlex4">
+              <a href="#">
+                <div class="kadrAks">
+                  <img
+                    src="assets/media/images/home-s11-left.webp"
+                    alt="نوین ویپ"
+                  />
+                </div>
+                <div class="kadrContent">
+                  <div>نوین ویپ</div>
+                  <div>نصب و شخصی سازی تلفن گویا</div>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
 
     <!-- فوتر -->
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="kadrFlex">
+          <div class="itemFlex itemFlex1">
+            <h4>اصلی</h4>
+            <ul class="footerList">
+              <li><a href="#" class="footerLink">خانه</a></li>
+              <li><a href="#" class="footerLink">قالب ها</a></li>
+              <li><a href="#" class="footerLink">امکانات</a></li>
+              <li><a href="#" class="footerLink">تعرفه ها</a></li>
+              <li><a href="#" class="footerLink">دامنه اختصاصی</a></li>
+              <li><a href="#" class="footerLink">راهنما</a></li>
+              <li><a href="#" class="footerLink">وبلاگ</a></li>
+            </ul>
+          </div>
+
+          <div class="itemFlex itemFlex2">
+            <h4>راهکار ها</h4>
+            <ul class="footerList">
+              <li><a href="#" class="footerLink">سایت ساز</a></li>
+              <li><a href="#" class="footerLink">فروشگاه ساز</a></li>
+              <li><a href="#" class="footerLink">سایت ارزان</a></li>
+              <li>
+                <a href="#" class="footerLink">فروشگاه ساز اینستاگرامی</a>
+              </li>
+              <li><a href="#" class="footerLink">طراحی اختصاصی</a></li>
+              <li><a href="#" class="footerLink">اتصال به Api</a></li>
+            </ul>
+          </div>
+
+          <div class="itemFlex itemFlex3">
+            <h4>موضوعی</h4>
+            <ul class="footerList">
+              <li><a href="#" class="footerLink">سایت شرکتی</a></li>
+              <li><a href="#" class="footerLink">سایت شخصی</a></li>
+              <li><a href="#" class="footerLink">سایت بیمه</a></li>
+              <li><a href="#" class="footerLink">سایت رستوران</a></li>
+              <li><a href="#" class="footerLink">سایت فروشگاهی</a></li>
+              <li><a href="#" class="footerLink">سایت املاک</a></li>
+              <li><a href="#" class="footerLink">سایت پزشکی</a></li>
+              <li><a href="#" class="footerLink">سایت خبری</a></li>
+              <li><a href="#" class="footerLink">سایت آتلیه و هنری</a></li>
+              <li><a href="#" class="footerLink">سایت آژانس مسافرتی</a></li>
+            </ul>
+          </div>
+
+          <div class="itemFlex itemFlex4">
+            <h4>بیشتر</h4>
+            <ul class="footerList">
+              <li><a href="#" class="footerLink">قوانین و مقررات</a></li>
+              <li><a href="#" class="footerLink">به روزرسانی ها</a></li>
+              <li><a href="#" class="footerLink">درباره ما</a></li>
+              <li><a href="#" class="footerLink">تماس با ما</a></li>
+              <li><a href="#" class="footerLink">استخدام</a></li>
+            </ul>
+          </div>
+
+          <div class="itemFlex itemFlex5">
+            <!-- لوگو -->
+            <div class="kadrLogo">
+              <a href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 87.7 163.8"
+                  style="height: 70px; display: block"
+                >
+                  <path
+                    fill="#c2d5ef"
+                    d="M0 123.9v26.4l26.2 13.5v-27.1z"
+                  ></path>
+                  <path
+                    fill="#dcecff"
+                    d="M47 122.8v27.5l-20.8 13.5v-26z"
+                  ></path>
+                  <path
+                    fill="#628fea"
+                    d="M53.2 58.8L0 90.6l26.2 13.7 57.2-35z"
+                  ></path>
+                  <path fill="#92b4ea" d="M0 90.5V124l26.2 13.8v-33.5z"></path>
+                  <path
+                    fill="#4575ba"
+                    d="M26.2 104.3l61.5-38.1v30.1l-61.5 41.5z"
+                  ></path>
+                  <path
+                    fill="#88cbe5"
+                    d="M0 13.7L25.9 0l61.8 35.1-23.1 15.8z"
+                  ></path>
+                  <path
+                    fill="#4ba5d1"
+                    d="M0 13.7v28.4l64.3 38.6.6-30.3z"
+                  ></path>
+                  <path
+                    fill="#9fdaed"
+                    d="M87.6 35.1v31.2L64.3 80.8l.1-30.7z"
+                  ></path>
+                  <path d="M87.7 35v31.2m0-31.1v31" fill="#5ac1d8"></path>
+                </svg>
+              </a>
+            </div>
+
+            <div class="kadrContact">
+              <div class="address" style="display: flex; align-items: center">
+                <i class="fa-solid fa-location-dot"></i>
+                <span>
+                  تهران، فاطمی غربی، بعد از تقاطع کارگر، نبش کوچه خزان، پلاک ۲،
+                  طبقه ۳ (مراجعه حضوری با هماهنگی قبلی)
+                </span>
+              </div>
+
+              <div class="tel">
+                <i class="fa-solid fa-phone" style="vertical-align: middle"></i>
+                <span><a href="tel:02191003383">۰۲۱۹۱۰۰۳۳۸۳</a></span>
+              </div>
+
+              <div class="email">
+                <i
+                  class="fa-solid fa-envelope"
+                  style="vertical-align: middle"
+                ></i>
+                <span>info@portal.ir</span>
+              </div>
+
+              <!-- شبکه های اجتماعی -->
+              <div class="socialIcon">
+                <div>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+                <div>
+                  <a href="https://telegram.org" class="icon telegram"
+                    ><i class="fab fa-telegram-plane"></i
+                  ></a>
+                </div>
+
+                <div>
+                  <a href="https://twitter.com" class="icon twitter"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                </div>
+
+                <div>
+                  <a href="https://instagram.com" class="icon instagram"
+                    ><i class="fab fa-instagram"></i
+                  ></a>
+                </div>
+
+                <div>
+                  <a href="https://linkedin.com" class="icon linkedin"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
+                </div>
+              </div>
+
+              <!-- تماس با ما -->
+              <div class="kadrDokme">
+                <a href="#" class="dokme">تماس با ما</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footerBottom">
+          <p>
+            تمامی حقوق مادی و معنوی این وبسایت متعلق به <a href="#">پرتال</a> می
+            باشد و هرگونه کپی برداری پیگرد قانونی دارد .
+          </p>
+
+          <p>طراح و سازنده : <span style="color: #ffa912">متین ایوبی</span></p>
+        </div>
+      </div>
+    </footer>
 
     <!-- fontawesome -->
     <script
