--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <!-- منو -->
             <div class="kadrMenu">
-              <div class="navItem"><a href="#">قالب</a></div>
+              <div class="navItem"><a href="#">قالب ها</a></div>
               <div class="navItem"><a href="#">تعرفه ها</a></div>
               <div class="navItem"><a href="#">نمونه کار ها</a></div>
               <!-- آیتم های دارای زیر منو -->
@@ -377,6 +377,145 @@
               <div class="sabtNam"><a href="#">ثبت نام</a></div>
             </div>
           </div>
+
+          <!-- منوی همبرگری -->
+          <!-- منوی همبرگری -->
+          <!-- منوی همبرگری -->
+          <!-- منوی همبرگری -->
+          <!-- منوی همبرگری -->
+          <!-- منوی همبرگری -->
+          <!-- منوی همبرگری -->
+          <!-- منوی همبرگری -->
+          <!-- منوی همبرگری -->
+
+          <div class="iconMenuMobile">
+            <i
+              class="fa-solid fa-bars iconOpenMenu"
+              onclick="openMenuMobile()"
+            ></i>
+            <i
+              class="fa-solid fa-xmark iconCloseMenu"
+              onclick="closeMenuMobile()"
+            ></i>
+          </div>
+
+          <!-- کادر منو -->
+          <div class="kadrDisableScroll" onclick="closeMenuMobile()"></div>
+
+          <div class="kadrMenuMobile">
+            <div class="menuHead">
+              <div>
+                <svg
+                  class="logo ml-4"
+                  style="height: 54px"
+                  version="1.1"
+                  id="Layer_1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  x="0"
+                  y="0"
+                  viewBox="0 0 87.7 163.5"
+                  xml:space="preserve"
+                >
+                  <style>
+                    .st0 {
+                      fill: #b8ccf6;
+                    }
+                    .st1 {
+                      fill: #a1bcf2;
+                    }
+                  </style>
+                  <path class="st0" d="M0 123.9v26.4l26.2 13.5v-27.1z"></path>
+                  <path class="st1" d="M47 122.8v27.5l-20.8 13.5v-26z"></path>
+                  <path
+                    fill="#e8eefc"
+                    d="M53.2 58.8L0 90.6l26.2 13.7 57.2-35z"
+                  ></path>
+                  <path fill="#d0ddf9" d="M0 90.5V124l26.2 13.8v-33.5z"></path>
+                  <path
+                    fill="#fff"
+                    d="M26.2 104.3l61.5-38.1v30.1l-61.5 41.5z"
+                  ></path>
+                  <path
+                    fill="#89abef"
+                    d="M0 13.7L25.9 0l61.8 35.1-23.1 15.8z"
+                  ></path>
+                  <path class="st0" d="M0 13.7v28.4l64.3 38.6.6-30.3z"></path>
+                  <path
+                    class="st1"
+                    d="M87.6 35.1v31.2L64.3 80.8l.1-30.7z"
+                  ></path>
+                  <path d="M87.7 35v31.2m0-31.1v31" fill="#5ac1d8"></path>
+                </svg>
+              </div>
+
+              <div>
+                <h2>پرتال</h2>
+                <p>دریچه ای به جهان اینترنت</p>
+              </div>
+            </div>
+
+            <!-- آیتم های منو -->
+            <div class="menuMobile">
+              <ul class="listItemMobile">
+                <li class="itemMobile"><a href="#">قالب ها</a></li>
+
+                <li class="itemMobile"><a href="#">تعرفه ها</a></li>
+
+                <li class="itemMobile"><a href="#">نمونه کار ها</a></li>
+
+                <li class="itemMobile">
+                  <button class="accordion">امکانات</button>
+                  <div class="panel">
+                    <div class="contentPanel">
+                      <ul>
+                        <li><a href="#">امکانات و ویژگی ها</a></li>
+                        <li><a href="#">افزونه ها</a></li>
+                        <li><a href="#">دامنه اختصاصی</a></li>
+                        <li><a href="#">اتصال به Api</a></li>
+                        <li><a href="#">به روزرسانی سامانه</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+
+                <li class="itemMobile">
+                  <button class="accordion">خدمات</button>
+                  <div class="panel">
+                    <div class="contentPanel">
+                      <ul>
+                        <li><a href="#">سایت ساز</a></li>
+                        <li><a href="#">فروشگاه ساز</a></li>
+                        <li><a href="#">طراحی سایت ارزان</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+
+                <li class="itemMobile">
+                  <button class="accordion">ادامه</button>
+                  <div class="panel">
+                    <div class="contentPanel">
+                      <ul>
+                        <li><a href="#">آکادمی</a></li>
+                        <li><a href="#">راهنمای استفاده</a></li>
+                        <li><a href="#">تماس با ما</a></li>
+                        <li><a href="#">وبلاگ</a></li>
+                        <li><a href="#">قوانین و مقررات</a></li>
+                        <li><a href="#">درباره ما</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+
+              <div class="navKadrLeft">
+                <div class="kadrLogin">
+                  <div class="vorood"><a href="#">ورود</a></div>
+                  <div class="sabtNam"><a href="#">ثبت نام</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
@@ -392,7 +531,7 @@
             <h1>طراحی سایت و فروشگاه اینترنتی خود را با پرتال شروع کنید!</h1>
             <p>
               از شروع راه اندازی سایت و فروشگاه اینترنتی تا رسیدن به فروش بالا
-              در کنارتان هستیم، 7 روز آینده را به صورت آزمایشی از فروشگاه ساز
+              در کنارتان هستیم، ۷ روز آینده را به صورت آزمایشی از فروشگاه ساز
               پرتال استفاده کنید.
             </p>
 
@@ -625,6 +764,23 @@
               </div>
             </div>
 
+            <div class="itemFlex itemFlex5">
+              <div class="kadrAks">
+                <img
+                  src="assets/media/images/home-s5-bottom-left.png"
+                  alt="پشتیبانی، حتی روزهای تعطیل"
+                />
+              </div>
+              <div class="kadrContent">
+                <h3>پشتیبانی، حتی روزهای تعطیل</h3>
+                <p>
+                  تیم پشتیبانی ما در تمام روزهای هفته از ساعت ۹ تا ۲۲ و در
+                  تعطیلات از ساعت ۹ تا ۱۷، از طریق سایت، ایمیل و تلفن پاسخگوی
+                  شماست.
+                </p>
+              </div>
+            </div>
+
             <div class="itemFlex itemFlex4">
               <div class="kadrAks">
                 <img
@@ -639,23 +795,6 @@
                   طراحی وب سایت شما به گونه‌ای است که صفحه نمایش کاربر هر
                   اندازه‌ای باشد، باز هم سایت شما خوانا، جذاب و کاملاً قابل
                   استفاده خواهد بود.
-                </p>
-              </div>
-            </div>
-
-            <div class="itemFlex itemFlex5">
-              <div class="kadrAks">
-                <img
-                  src="assets/media/images/home-s5-bottom-left.png"
-                  alt="پشتیبانی، حتی روزهای تعطیل"
-                />
-              </div>
-              <div class="kadrContent">
-                <h3>پشتیبانی، حتی روزهای تعطیل</h3>
-                <p>
-                  تیم پشتیبانی ما در تمام روزهای هفته از ساعت 9 تا 22 و در
-                  تعطیلات از ساعت 9 تا 17، از طریق سایت، ایمیل و تلفن پاسخگوی
-                  شماست.
                 </p>
               </div>
             </div>
